--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ terraform-dev-postgres/backups/
 /app/app/data/generated/content_corpuses
 act.zip
 terraform/staging/tfplan
+terraform-gcp/staging.tfplan
