--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,19 @@
     "test:unit": "node run-jest.js --config jest.config.performance.cjs --selectProjects=unit --silent",
     "test:integration": "node run-jest.js --config jest.config.performance.cjs --selectProjects=integration --silent",
     "test:clear-cache": "node node_modules/jest/bin/jest.js --clearCache",
+    "test:suites": "node test-suite-runner.js --all",
+    "test:suites:components": "node run-jest.js --config jest.config.suites.cjs --selectProjects=components",
+    "test:suites:chat": "node run-jest.js --config jest.config.suites.cjs --selectProjects=chat",
+    "test:suites:hooks": "node run-jest.js --config jest.config.suites.cjs --selectProjects=hooks",
+    "test:suites:auth": "node run-jest.js --config jest.config.suites.cjs --selectProjects=auth",
+    "test:suites:integration": "node test-suite-runner.js integration-basic integration-advanced integration-comprehensive integration-critical",
+    "test:suites:fast": "node test-suite-runner.js --priority 1",
+    "test:suites:medium": "node test-suite-runner.js --priority 2",
+    "test:suites:slow": "node test-suite-runner.js --priority 4",
+    "test:suites:parallel": "node test-suite-runner.js --all --max-parallel 8",
+    "test:suites:sequential": "node test-suite-runner.js --all --sequential",
+    "test:suites:watch": "node run-jest.js --config jest.config.suites.cjs --watch",
+    "test:suites:coverage": "node run-jest.js --config jest.config.suites.cjs --coverage",
     "cypress:open": "cypress open",
     "cy:run": "cypress run",
     "cy:test": "start-server-and-test dev http://localhost:3000 cypress:run",
