--- a/work_in_progress/.github/config/secrets.yml
+++ b/work_in_progress/.github/config/secrets.yml
@@ -113,7 +113,7 @@ environment_secrets:
     PROD_DOMAIN:
       description: Production domain
       required: true
-      example: app.netra.ai
+      example: app.netrasystems.ai
     
     PROD_SSL_CERT:
       description: SSL certificate for production
