--- a/work_in_progress/.github/config/environments.yml
+++ b/work_in_progress/.github/config/environments.yml
@@ -4,7 +4,7 @@
 environments:
   development:
     description: Development environment for testing
-    url: https://dev.netra.ai
+    url: https://dev.netrasystems.ai
     protection_rules:
       required_reviewers: 0
       wait_timer: 0
@@ -19,7 +19,7 @@ environments:
   
   staging:
     description: Staging environment for PR previews
-    url: https://staging.netra.ai
+    url: https://staging.netrasystems.ai
     protection_rules:
       required_reviewers: 0
       wait_timer: 0
@@ -42,7 +42,7 @@ environments:
   
   production:
     description: Production environment
-    url: https://app.netra.ai
+    url: https://app.netrasystems.ai
     protection_rules:
       required_reviewers: 2
       wait_timer: 5  # minutes
@@ -107,5 +107,5 @@ deployment_settings:
     email:
       enabled: false
       recipients:
-        - devops@netra.ai
+        - devops@netrasystems.ai
       on_failure_only: true
