--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ sqlmodel>=0.0.8
 alembic>=1.10.0
 psycopg2-binary>=2.9.0
 python-jose[cryptography]>=3.3.0
+PyJWT>=2.8.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.5
 google-cloud-secret-manager>=2.16.0
