--- a/.github/workflows/factory-status-report.yml
+++ b/.github/workflows/factory-status-report.yml
@@ -31,7 +31,7 @@ permissions:
 jobs:
   generate-report:
     name: Generate Factory Status Report
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     
     steps:
       - name: Checkout repository with full history
