--- a/.github/workflows/frontend-tests-ultra.yml
+++ b/.github/workflows/frontend-tests-ultra.yml
@@ -28,7 +28,7 @@ jobs:
   # Job 1: Fast changed-files only execution for quick feedback
   quick-feedback:
     name: 🚀 Quick Feedback (Changed Files)
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     timeout-minutes: 5
     if: github.event_name == 'pull_request'
     
@@ -73,7 +73,7 @@ jobs:
   # Job 2: Smart test execution with optimization
   smart-execution:
     name: 🧠 Smart Test Execution
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     timeout-minutes: 15
     if: inputs.test_level == 'smart' || (github.event_name != 'workflow_dispatch' && github.event_name == 'push')
     
@@ -134,7 +134,7 @@ jobs:
   # Job 3: Aggregate results from sharded execution
   aggregate-results:
     name: 📊 Aggregate Test Results
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     needs: smart-execution
     if: always()
     timeout-minutes: 5
@@ -182,7 +182,7 @@ jobs:
   # Job 4: Fast execution for quick validation
   fast-execution:
     name: ⚡ Fast Execution
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     timeout-minutes: 8
     if: inputs.test_level == 'fast'
     
@@ -216,7 +216,7 @@ jobs:
   # Job 5: Comprehensive execution with full coverage
   comprehensive-execution:
     name: 🔍 Comprehensive Testing
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     timeout-minutes: 25
     if: inputs.test_level == 'comprehensive' || github.ref == 'refs/heads/main'
     
@@ -256,7 +256,7 @@ jobs:
   # Job 6: Performance monitoring
   performance-monitoring:
     name: 📈 Performance Monitoring
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     timeout-minutes: 10
     if: github.ref == 'refs/heads/main' || inputs.test_level == 'comprehensive'
     
@@ -308,7 +308,7 @@ jobs:
 # Summary job for status checks
   test-summary:
     name: 📋 Test Summary
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     needs: [quick-feedback, smart-execution, aggregate-results]
     if: always()
     timeout-minutes: 2
