--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -8,7 +8,8 @@ PyJWT==2.8.0
 python-multipart==0.0.6
 httpx==0.25.1
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
+passlib==1.7.4
 python-dotenv==1.0.0
 sqlalchemy>=2.0.0
 asyncpg
