--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ alembic>=1.10.0
 psycopg2-binary>=2.9.0
 python-jose[cryptography]>=3.3.0
 PyJWT>=2.8.0
-passlib[bcrypt]>=1.7.4
+bcrypt==3.2.2
+passlib>=1.7.4
 python-multipart>=0.0.5
 google-cloud-secret-manager>=2.16.0
 authlib>=1.0.0
