--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ alembic>=1.10.0
 psycopg2-binary>=2.9.0
 python-jose[cryptography]>=3.3.0
 PyJWT>=2.8.0
-bcrypt>=4.1.2
+argon2-cffi>=23.1.0
 python-multipart>=0.0.5
 google-cloud-secret-manager>=2.16.0
 authlib>=1.0.0
