--- a/config/alembic.ini
+++ b/config/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://postgres@localhost:5433/netra_dev
+sqlalchemy.url = postgresql+psycopg2://postgres:DTprdt5KoQXlEG4Gh9lF@localhost:5433/netra_dev
 
 
 [post_write_hooks]
