--- a/config/staging.env
+++ b/config/staging.env
@@ -13,8 +13,8 @@ ENVIRONMENT=staging
 # The REDIS_URL will be set by GitHub Actions
 
 # ClickHouse Configuration (if needed for staging)
-CLICKHOUSE_URL=clickhouse://default:@xedvrr4c3r.us-central1.gcp.clickhouse.cloud:8443/default?secure=1
-CLICKHOUSE_HOST=xedvrr4c3r.us-central1.gcp.clickhouse.cloud
+CLICKHOUSE_URL=clickhouse://default:@clickhouse_host_url_placeholder:8443/default?secure=1
+CLICKHOUSE_HOST=clickhouse_host_url_placeholder
 CLICKHOUSE_PORT=8443
 CLICKHOUSE_SECURE=true
 CLICKHOUSE_TIMEOUT=30
