--- a/config/staging.env
+++ b/config/staging.env
@@ -13,8 +13,8 @@ ENVIRONMENT=staging
 # The REDIS_URL will be set by GitHub Actions
 
 # ClickHouse Configuration (if needed for staging)
-CLICKHOUSE_URL=clickhouse://default:@clickhouse_host_url_placeholder:8443/default?secure=1
-CLICKHOUSE_HOST=clickhouse_host_url_placeholder
+CLICKHOUSE_URL=clickhouse://default:@staging-clickhouse.netrasystems.ai:8443/default?secure=1
+CLICKHOUSE_HOST=staging-clickhouse.netrasystems.ai
 CLICKHOUSE_PORT=8443
 CLICKHOUSE_SECURE=true
 CLICKHOUSE_TIMEOUT=30
@@ -32,6 +32,14 @@ FERNET_KEY=staging-fernet-key-should-be-replaced-in-deployment
 SKIP_MIGRATION_ON_STARTUP=false
 ENABLE_STARTUP_CHECKS=true
 STARTUP_CHECK_TIMEOUT=30
+
+# API Configuration for Staging
+API_BASE_URL=https://api.staging.netrasystems.ai
+WS_BASE_URL=wss://api.staging.netrasystems.ai/ws
+FRONTEND_URL=https://staging.netrasystems.ai
+
+# CORS Configuration
+CORS_ALLOWED_ORIGINS=https://staging.netrasystems.ai,https://api.staging.netrasystems.ai
 
 # Health Check Configuration
 HEALTH_CHECK_GRACE_PERIOD=60
