--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -41,6 +41,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "__tests__/setup/global.d.ts", "types/jest.d.ts", "jest-setup.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "__tests__/setup/global.d.ts", "types/jest.d.ts", "jest-setup.d.ts", "**/*.test.ts", "**/*.test.tsx"],
   "exclude": ["node_modules"]
 }
