--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -9,6 +9,7 @@ markers =
     stress: marks tests as stress tests (high load/scale tests)
     slow: marks tests as slow tests (long-running tests)
     performance: marks tests as performance tests (performance benchmarks)
+    critical: marks tests as critical tests (essential system reliability tests)
     real_llm: marks tests that require real LLM API calls (uses actual API keys)
     real_database: marks tests that require real database connections (PostgreSQL)
     real_redis: marks tests that require real Redis connection
