--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ terraform/staging/tfplan
 terraform-gcp/staging.tfplan
 terraform-gcp/staging.tfplan
 ...AAA launch CLAUDE WINDOWS.BAT
+.service_discovery/auth.json
