--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,11 @@
     "cypress:open": "cypress open",
     "cy:run": "cypress run",
     "cy:test": "start-server-and-test dev http://localhost:3000 cypress:run",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "e2e:test": "playwright test",
+    "e2e:test:ui": "playwright test --ui",
+    "e2e:test:headed": "playwright test --headed",
+    "e2e:test:debug": "playwright test --debug"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.4",
@@ -114,6 +118,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/websocket": "^1.0.10",
+    "@playwright/test": "^1.50.0",
     "broadcast-channel": "^7.1.0",
     "cross-fetch": "^4.1.0",
     "cypress": "^14.5.3",
