--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -42,5 +42,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "__tests__/setup/global.d.ts", "types/jest.d.ts", "jest-setup.d.ts", "@types/jest.d.ts", "**/*.test.ts", "**/*.test.tsx"],
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx", "__tests__/**/*"]
+  "exclude": ["node_modules"]
 }
