--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ terraform-gcp/staging.tfplan
 .service_discovery/auth.json
 .service_discovery/auth.json
 .dev_launcher_cache/dependency_cache.json
+terraform-gcp/staging.tfplan
