--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ terraform-gcp/staging.tfplan
 .service_discovery/auth.json
 .dev_launcher_cache/dependency_cache.json
 terraform-gcp/staging.tfplan
+.dev_launcher_cache/startup_cache.json
