--- a/.env.auth.example
+++ b/.env.auth.example
@@ -16,7 +16,7 @@ JWT_EXPIRY_MINUTES=15
 REFRESH_TOKEN_EXPIRY_DAYS=30
 
 # Database (auth service)
-AUTH_DATABASE_URL=postgresql://postgres:password@localhost:5433/auth_db
+DATABASE_URL=postgresql://postgres:password@localhost:5433/auth_db
 
 # Redis (for session management)
 REDIS_URL=redis://localhost:6379/0
