--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ terraform-gcp/staging.tfplan
 terraform-gcp/staging.tfplan
 ...AAA launch CLAUDE WINDOWS.BAT
 .service_discovery/auth.json
+.env.test
+.service_discovery/auth.json
