--- a/.env.test
+++ b/.env.test
@@ -19,6 +19,7 @@ JWT_REFRESH_EXPIRY_DAYS=1
 
 # Database URLs (use in-memory for speed)
 AUTH_DATABASE_URL=sqlite+aiosqlite:///:memory:
+DATABASE_URL=postgresql+asyncpg://postgres:DTprdt5KoQXlEG4Gh9lF@localhost:5433/netra_test
 
 # Logging Configuration
 LOG_LEVEL=WARNING
