--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,11 @@
-[tool:pytest]
+[pytest]
 markers =
     performance: Performance and SLA validation tests
     slow: Slow tests that may take longer to complete  
     unit: Unit tests for isolated components
     integration: Integration tests for component interaction
     smoke: Quick smoke tests for basic functionality
-    critical: Critical path tests
+    critical: Critical path tests that protect revenue
     real_services: Tests requiring real external services
     mock_only: Tests using only mocks
     agents: Agent-specific tests
@@ -35,6 +35,8 @@ addopts =
     --disable-warnings
     --tb=short
     --asyncio-mode=auto
+
+asyncio_default_fixture_loop_scope = function
 
 filterwarnings =
     ignore::DeprecationWarning
