--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,7 @@ markers =
     security: Security validation tests  
     api: API endpoint tests
     frontend: Frontend component tests
+    rate_limiting: Rate limiting and DDoS protection tests
 
 testpaths = 
     tests
