--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,7 @@ markers =
     api: API endpoint tests
     frontend: Frontend component tests
     rate_limiting: Rate limiting and DDoS protection tests
+    stress: Stress tests with high load or concurrency
 
 testpaths = 
     tests
