--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -26,6 +26,9 @@ markers =
     flaky: marks tests as flaky (tests that may fail intermittently)
     first_time_user: marks tests for first time user flow
     first_time_user_validation: marks tests for first time user validation
+    resilience: marks tests as resilience and recovery validation tests
+    redis: marks tests that depend on Redis service
+    staging: marks tests specific to staging environment
 
 [coverage:run]
 source = app
