--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -20,6 +20,9 @@ markers =
     unit: marks tests as unit tests (isolated component testing)
     integration: marks tests as integration tests (component interaction)
     e2e: marks tests as end-to-end tests (full system flow)
+    resilience: marks tests as resilience and recovery validation tests
+    redis: marks tests that depend on Redis service
+    staging: marks tests specific to staging environment
 
 [coverage:run]
 source = app
