--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,9 @@ markers =
     benchmark: Performance benchmark tests
     isolation: Isolation and multi-tenancy tests
     soak: Long-duration soak testing for stability validation
+    resilience: Resilience and recovery validation tests
+    redis: Redis-dependent tests requiring real Redis connection
+    staging: Staging environment specific tests
 
 testpaths = 
     tests
