--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "test:watch:fast": "node run-jest.js --config jest.config.performance.cjs --watch --changedSince=main",
     "test:ci": "node run-jest.js --config jest.config.performance.cjs --ci --silent --bail",
     "test:unit": "node run-jest.js --config jest.config.performance.cjs --selectProjects=unit --silent",
-    "test:integration": "node run-jest.js --config jest.config.performance.cjs --selectProjects=integration --silent",
+    "test:integration": "node run-jest.js --config jest.config.integration.cjs",
     "test:clear-cache": "node node_modules/jest/bin/jest.js --clearCache",
     "test:suites": "node test-suite-runner.js --all",
     "test:suites:components": "node run-jest.js --config jest.config.suites.cjs --selectProjects=components",
@@ -41,7 +41,6 @@
     "test:shard:aggregate": "node test-shard-runner.js --aggregate",
     "test:validate-ultra": "node validate-ultra-config.js",
     "test:smoke": "node run-jest.js --config jest.config.smoke.cjs --silent",
-    "test:integration": "node run-jest.js --config jest.config.integration.cjs",
     "test:integration:auth-flow": "node run-jest.js --config jest.config.integration.cjs --testNamePattern=\"auth.*flow\"",
     "test:integration:websocket": "node run-jest.js --config jest.config.integration.cjs --testNamePattern=\"websocket\"",
     "test:integration:store-sync": "node run-jest.js --config jest.config.integration.cjs --testNamePattern=\"store.*sync\"",
@@ -131,6 +130,8 @@
     "@playwright/test": "^1.50.0",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@swc/core": "^1.13.4",
+    "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
