--- a/pytest.ini
+++ b/pytest.ini
@@ -42,6 +42,8 @@ markers =
     real_quality: Tests requiring real quality validation services
     flaky: Tests that may fail intermittently
     bad_test: Tests marked as consistently failing
+    l2_integration: Level 2 integration tests
+    l4_integration: Level 4 integration tests
 
 testpaths = 
     tests
