--- a/netra_backend/pytest.ini
+++ b/netra_backend/pytest.ini
@@ -2,6 +2,7 @@
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = session
 addopts = --tb=short
+pythonpath = ..
 log_cli = true
 log_cli_level = WARNING
 log_cli_format = %(message)s
