--- a/config/staging.env
+++ b/config/staging.env
@@ -12,7 +12,7 @@ ENVIRONMENT=staging
 # Staging uses a shared Redis instance with database separation by PR
 # The REDIS_URL will be set by GitHub Actions
 
-# ClickHouse Configuration - Optional in staging (infrastructure may not be provisioned)
+# ClickHouse Configuration
 CLICKHOUSE_URL=clickhouse://default:@xedvrr4c3r.us-central1.gcp.clickhouse.cloud:8443/default?secure=1
 CLICKHOUSE_HOST=xedvrr4c3r.us-central1.gcp.clickhouse.cloud
 CLICKHOUSE_PORT=8443
@@ -22,7 +22,7 @@ CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DB=default
 CLICKHOUSE_SECURE=true
 CLICKHOUSE_TIMEOUT=30
-CLICKHOUSE_REQUIRED=false
+CLICKHOUSE_REQUIRED=true
 
 # Redis Configuration - Optional in staging (infrastructure may not be provisioned)
 REDIS_REQUIRED=false
